--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                  
                 </ul>
               </div>
-              <a class="btn btn-ghost text-4xl font-bold">Hockey<span class="text-[#FF4240]">’</span>s</a>
+              <a class=" text-4xl font-bold">Hockey<span class="text-[#FF4240]">’</span>s</a>
             </div>
             <div class="navbar-center hidden lg:flex">
               <ul class="menu menu-horizontal px-1 text-xl font-medium">
@@ -91,7 +91,7 @@
           </div>
     </div>
     <!-- banner section  -->
-     <div class="relative px-6">
+     <div class="relative px-6 lg:px-0 container mx-auto ">
      
       <div class="carousel w-full">
         <div id="slide1" class="carousel-item relative w-full">
@@ -131,14 +131,58 @@
             </div>
         </div>
       </div>
-      <div class="lg:absolute bottom-6 right-12 lg:w-1/3 bg-slate-900 py-12 px-6 rounded-md text-white space-y-4">
+      <div class="lg:absolute bottom-14 right-12 lg:w-1/3 bg-slate-900 py-12 px-6 rounded-md text-white space-y-4">
         <h6 class="text-2xl font-semibold">Meet all the heroes from the field</h6>
         <p class="">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
               </div>
      </div>
     </header>
-    <main>
+    <main class="container mx-auto">
+<!-- stat section  -->
+ <section class="my-24">
+  <div class="border-y-2 border-dashed py-12 text-center">
+    <h3 class="text-3xl font-bold mb-3">Professional Hockeys Club</h3>
+    <p class="opacity-80 lg:w-1/2 mx-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+  </div>
+  <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+<div class="flex flex-col justify-center items-center py-6 space-y-3 ">
+  <div class="relative">
+  <div class="radial-progress z-50 text-[#FF4240]" style="--value:87;" role="progressbar">87%</div>
+  <div class="absolute top-0 left-0 rotate-90 text-slate-300 radial-progress text-primary" style="--value:87;" role="progressbar"></div>
 
+  </div>
+  <h6 class="text-xl font-semibold">Prayer Facility</h6>
+  <p class="text-center">Amet consectetur. Condimentum dignissim adipiscing .</p>
+</div>
+<div class="flex flex-col justify-center items-center py-6 space-y-3 ">
+  <div class="relative">
+  <div class="radial-progress z-50 text-[#49D293]" style="--value:95;" role="progressbar">95%</div>
+  <div class="absolute top-0 left-0 rotate-90 text-slate-300 radial-progress text-primary" style="--value:87;" role="progressbar"></div>
+
+  </div>
+  <h6 class="text-xl font-semibold">Prayer Facility</h6>
+  <p class="text-center">Amet consectetur. Condimentum dignissim adipiscing .</p>
+</div>
+<div class="flex flex-col justify-center items-center py-6 space-y-3 ">
+  <div class="relative">
+  <div class="radial-progress z-50 text-[#FFB546]" style="--value:90;" role="progressbar">90%</div>
+  <div class="absolute top-0 left-0 rotate-90 text-slate-300 radial-progress text-primary" style="--value:87;" role="progressbar"></div>
+
+  </div>
+  <h6 class="text-xl font-semibold">Prayer Facility</h6>
+  <p class="text-center">Amet consectetur. Condimentum dignissim adipiscing .</p>
+</div>
+<div class="flex flex-col justify-center items-center py-6 space-y-3 ">
+  <div class="relative">
+  <div class="radial-progress z-50 text-[#4C8DF1]" style="--value:80;" role="progressbar">80%</div>
+  <div class="absolute top-0 left-0 rotate-90 text-slate-300 radial-progress text-primary" style="--value:87;" role="progressbar"></div>
+
+  </div>
+  <h6 class="text-xl font-semibold">Prayer Facility</h6>
+  <p class="text-center">Amet consectetur. Condimentum dignissim adipiscing .</p>
+</div>
+  </div>
+ </section>
     </main>
     <footer>
 
