--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hockey</title>
+    <link rel="stylesheet" href="style.css">
      <!-- Google Font Link -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +35,10 @@
                          "Manrope": 'Manrope',
                      },
                      backgroundImage: {
-                         "bgImage": "url('./assets/bg.jpg')",
+                         "bgImage-1": "url('./images/2.png')",
+                         "bgImage-2": "url('./images/3.png')",
+                         "bgImage-3": "url('./images/4.png')",
+
                      },
                  },
              },
@@ -183,6 +187,41 @@
 </div>
   </div>
  </section>
+ <!-- program section  -->
+  <section>
+    <div class="border-y-2 border-dashed py-12 text-center">
+      <h3 class="text-3xl font-bold mb-3">Program Sections</h3>
+      <p class="opacity-80 lg:w-1/2 mx-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+    </div>
+    <div class="mt-12 grid grid-cols-1 lg:grid-cols-2  gap-6">
+<div class="junior h-80 w-full flex flex-col justify-end items-center text-white p-12">
+  <div class=" space-y-4">
+    <h2 class="text-xl font-semibold">Junior Program</h2>
+    <p class="">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+      enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+      <button class="py-2 px-5 rounded-xl  bg-[#FF4240] ">Register Now!</button>
+  </div>
+</div>
+
+<div class="teen h-80 w-full flex flex-col justify-end items-center text-white p-12">
+  <div class=" space-y-4">
+    <h2 class="text-xl font-semibold">Teenager Program</h2>
+    <p class="">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+      enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+      <button class="py-2 px-5 rounded-xl  bg-[#FF4240] ">Register Now!</button>
+  </div>
+</div>
+<div class="pro h-80 w-full flex flex-col justify-end items-center text-white p-12 lg:col-span-2">
+  <div class=" space-y-4">
+    <h2 class="text-xl font-semibold">Professional Program</h2>
+    <p class="lg:w-6/12">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+      enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+      <button class="py-2 px-5 rounded-xl  bg-[#FF4240] ">Register Now!</button>
+  </div>
+</div>
+    </div>
+  </section>
+  
     </main>
     <footer>
 
