added client section

--- a/index.html
+++ b/index.html
@@ -429,6 +429,64 @@
 
     </div>
    </section>
+   <!-- client section  -->
+   <section class="my-24">
+    <div class="border-y-2 border-dashed py-12 text-center">
+      <h3 class="text-3xl font-bold mb-3">Clients Question</h3>
+      <p class="opacity-80 lg:w-1/2 mx-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+    </div>
+    <div class="mt-12 border rounded-xl p-5 lg:p-8 lg:flex  space-x-10">
+      <div>
+        <img class="lg:h-[430px] w-full lg:w-[600px]" src="Images/11.png" alt="">
+      </div>
+      <div >
+        <div class="collapse collapse-plus border-b rounded-none ">
+          <input type="radio" name="my-accordion-3" checked="checked" />
+          <div class="collapse-title text-xl font-bold">Our Equipment</div>
+          <div class="collapse-content">
+            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus border-b rounded-none">
+          <input type="radio" name="my-accordion-3" />
+          <div class="collapse-title text-xl font-bold">Hockey Training</div>
+          <div class="collapse-content">
+            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+          </div>
+        </div>
+       
+        <div class="collapse collapse-plus border-b rounded-none">
+          <input type="radio" name="my-accordion-3" />
+          <div class="collapse-title text-xl font-bold">Private Lessons</div>
+          <div class="collapse-content">
+            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus border-b rounded-none">
+          <input type="radio" name="my-accordion-3" />
+          <div class="collapse-title text-xl font-bold">Ski Touring</div>
+          <div class="collapse-content">
+            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus border-b rounded-none">
+          <input type="radio" name="my-accordion-3" />
+          <div class="collapse-title text-xl font-bold">Booking</div>
+          <div class="collapse-content">
+            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus ">
+          <input type="radio" name="my-accordion-3" />
+          <div class="collapse-title text-xl font-bold">Pricings</div>
+          <div class="collapse-content">
+            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+   </section>
     </main>
     <footer>
 
